test/spec_vectors/global/fail/module_1.wat
(module (global f32 (f32.const 0)) (func (global.set 0 (f32.const 1))))